# test_udm_ci

./: CMakeLists.txt
.github/workflows/: pragma-linux-ci.yml  pragma-windows-ci.yml
include/: udm_basic_types.cppm  udm_conversion.cppm  udm_exception.ixx  udm_trivial_types.ixx  udm_type_structs.ixx  udm_types.cppm
src/: ascii.cpp  c_wrapper.cpp  data.cpp  json.cpp  linked_property_wrapper.cpp  udm.cppm  util.cpp
src/implementation/: array.cpp  ascii.cpp  element.cpp  iterators.cpp  json.cpp  linked_property_wrapper.cpp  property.cpp  property_wrapper.cpp  util.cpp
src/interface/: array.cppm  conversion.cppm  element.cppm  element_impl.cppm  iterators.cppm  property.cppm  property_wrapper.cppm  property_wrapper_impl.cppm  trivial_types.cppm  type_structs.cppm  types.cppm  udm_enums.cppm  util.cppm
